tests/073_invalid_lvalues_binop.err
pirxc compilation failed: exit status 1
Output: error parsing program: tests/073_invalid_lvalues_binop.pirx:9:8: invalid assignment target: (+ x y)
Error: exit status 1
